--- a/stylesheets/layout.css
+++ b/stylesheets/layout.css
@@ -39,7 +39,7 @@ button {
   top: 0;
   left: 50%;
   font-size: 0px;
-  background: url(https://codia-f2c.s3.us-west-1.amazonaws.com/image/2025-10-30/fBpFn0ANm1.png)
+  background: url(https://imglink.io/i/cf44b691-dfdf-4c80-9aca-a97e63c0e19f.png)
     no-repeat center;
   background-size: cover;
   transform: translate(-47.13%, 0);
@@ -68,7 +68,7 @@ button {
   width: 480px;
   height: 518px;
   margin: 136px 0 0 440px;
-  background: url(https://codia-f2c.s3.us-west-1.amazonaws.com/image/2025-10-30/sNLKcwa94E.png)
+  background: url(https://imglink.io/i/e2ff3c32-0807-4745-bf11-c83bd623385a.png)
     no-repeat center;
   background-size: cover;
   z-index: 159;
@@ -96,7 +96,7 @@ button {
   height: 150px;
   top: 881px;
   left: 50%;
-  background: url(https://codia-f2c.s3.us-west-1.amazonaws.com/image/2025-10-30/VSYvvcJCkO.png)
+  background: url(https://imglink.io/i/6ea8e256-845a-4357-9150-f4dd860b5c80.png)
     no-repeat center;
   background-size: cover;
   transform: translate(-50%, 0);
@@ -165,10 +165,10 @@ button {
   top: 1080px;
   left: 93px;
   font-size: 0px;
-  background: url(https://codia-f2c.s3.us-west-1.amazonaws.com/image/2025-10-30/ePe5bcbmvw.png)
+  background: url(https://imglink.io/i/5bc20520-21f5-406f-bfb3-4284b4a76c55.png)
     no-repeat center;
   background-size: cover;
-  z-index: 15;
+  z-index: 0;
 }
 .heritage {
   display: flex;
@@ -291,7 +291,7 @@ button {
   height: 220px;
   top: 0;
   left: 50%;
-  background: url(https://codia-f2c.s3.us-west-1.amazonaws.com/image/2025-10-30/0V20vfh3Om.png)
+  background: url()
     no-repeat center;
   background-size: cover;
   transform: translate(-50.05%, 0);
@@ -413,11 +413,11 @@ button {
   height: 222px;
   top: 0;
   left: 50%;
-  background: url(https://codia-f2c.s3.us-west-1.amazonaws.com/image/2025-10-30/enoXBXFpxp.png)
+  background: url(https://imglink.io/i/5d95fc2b-8f8b-4560-a18e-fb41f3e36bde.png)
     no-repeat center;
   background-size: cover;
   transform: translate(-50%, 0);
-  z-index: 11;
+  z-index: 10;
 }
 .trendy-lots {
   display: flex;
@@ -482,7 +482,7 @@ button {
   height: 1240px;
   top: 181px;
   left: 50%;
-  background: url(https://codia-f2c.s3.us-west-1.amazonaws.com/image/2025-10-30/W0LFXJRuiD.png)
+  background: url(https://imglink.io/i/179c0180-4ad4-466f-9c1f-9215a7c0e01b.png)
     no-repeat center;
   background-size: cover;
   transform: translate(-50%, 0);
@@ -571,7 +571,7 @@ button {
   height: 536px;
   top: 0;
   left: 451px;
-  background: url(https://codia-f2c.s3.us-west-1.amazonaws.com/image/2025-10-30/0Nz5v7eTKS.png)
+  background: url(https://imglink.io/i/4282b381-d4b1-4ead-b33e-120b673086c8.png)
     no-repeat center;
   background-size: cover;
   z-index: 161;
@@ -582,7 +582,7 @@ button {
   height: 626px;
   top: 47px;
   left: 28px;
-  background: url(https://codia-f2c.s3.us-west-1.amazonaws.com/image/2025-10-30/bzCajX9S4k.png)
+  background: url(https://imglink.io/i/67349b08-207b-49e3-8018-6d74978194be.png)
     no-repeat center;
   background-size: cover;
   z-index: 160;
@@ -670,7 +670,7 @@ button {
   height: 174px;
   top: 580px;
   left: 765.75px;
-  background: url(https://codia-f2c.s3.us-west-1.amazonaws.com/image/2025-10-30/wxpSM90G8B.png)
+  background: url(https://imglink.io/i/937fa22e-dc59-4be2-9b1c-0e55099df1d2.png)
     no-repeat center;
   background-size: cover;
   z-index: 62;
@@ -861,7 +861,7 @@ button {
   height: 622px;
   top: 0;
   left: 541px;
-  background: url(https://codia-f2c.s3.us-west-1.amazonaws.com/image/2025-10-30/AsZgDbVOvs.png)
+  background: url(https://imglink.io/i/f9666c8b-0165-4882-b083-9b482b35df94.png)
     no-repeat center;
   background-size: cover;
   z-index: 163;
@@ -899,7 +899,7 @@ button {
   height: 485px;
   top: 277px;
   left: 118px;
-  background: url(https://codia-f2c.s3.us-west-1.amazonaws.com/image/2025-10-30/Etno9tLJhR.png)
+  background: url(https://imglink.io/i/9b256689-8ab1-4f9d-992e-7f13cbf502bc.png)
     no-repeat center;
   background-size: cover;
   z-index: 162;
@@ -910,7 +910,7 @@ button {
   height: 1240px;
   top: 490px;
   left: 49px;
-  background: url(https://codia-f2c.s3.us-west-1.amazonaws.com/image/2025-10-30/xS93Ar1uZt.png)
+  background: url(https://imglink.io/i/2941dffc-6bc1-442d-9be7-52a996646854.png)
     no-repeat center;
   background-size: cover;
   z-index: 3;
@@ -1005,7 +1005,7 @@ button {
   height: 174px;
   top: 0;
   left: 737.75px;
-  background: url(https://codia-f2c.s3.us-west-1.amazonaws.com/image/2025-10-30/hFoaZNACUq.png)
+  background: url(https://imglink.io/i/937fa22e-dc59-4be2-9b1c-0e55099df1d2.png)
     no-repeat center;
   background-size: cover;
   z-index: 69;
@@ -1044,7 +1044,7 @@ button {
   height: 385px;
   top: 175px;
   left: 391px;
-  background: url(https://codia-f2c.s3.us-west-1.amazonaws.com/image/2025-10-30/gF8HP26cMA.png)
+  background: url(https://imglink.io/i/47068c49-6438-44e7-9c1b-8dcacb259e1f.png)
     no-repeat center;
   background-size: cover;
   z-index: 164;
@@ -1140,7 +1140,7 @@ button {
   height: 558px;
   top: 522px;
   left: 0;
-  background: url(https://codia-f2c.s3.us-west-1.amazonaws.com/image/2025-10-30/rSVTxg67YO.png)
+  background: url(https://imglink.io/i/d80a4f93-8eb9-46d5-abba-4a5a37ccddbc.png)
     no-repeat center;
   background-size: cover;
   z-index: 165;
@@ -1291,7 +1291,7 @@ button {
   height: 269.809px;
   top: 1698.343px;
   left: 39.433px;
-  background: url(https://codia-f2c.s3.us-west-1.amazonaws.com/image/2025-10-30/JiczN0efxs.png)
+  background: url(https://imglink.io/i/38bf01d1-dbf7-4d52-8766-f5cb10a811eb.png)
     no-repeat center;
   background-size: cover;
   z-index: 19;
@@ -1350,7 +1350,7 @@ button {
   height: 174px;
   top: 1709px;
   left: 855.75px;
-  background: url(https://codia-f2c.s3.us-west-1.amazonaws.com/image/2025-10-30/OahFbgbGzC.png)
+  background: url(https://imglink.io/i/98537a4b-cd8f-4e3d-a843-5322a5153375.png)
     no-repeat center;
   background-size: cover;
   z-index: 101;
@@ -1361,7 +1361,7 @@ button {
   height: 1240px;
   top: 1711px;
   left: 49px;
-  background: url(https://codia-f2c.s3.us-west-1.amazonaws.com/image/2025-10-30/WaBzQLy3pr.png)
+  background: url(https://imglink.io/i/d8cc1ec9-9073-42ec-8623-90e8ce4354ca.png)
     no-repeat center;
   background-size: cover;
 }
@@ -1433,7 +1433,7 @@ button {
   width: 1229px;
   height: 580px;
   margin: 53px 0 0 69px;
-  background: url(https://codia-f2c.s3.us-west-1.amazonaws.com/image/2025-10-30/M7rrt6U62v.png)
+  background: url(https://imglink.io/i/a1551982-c657-4984-b12b-07b5981316b9.png)
     no-repeat center;
   background-size: cover;
   z-index: 166;
@@ -1544,7 +1544,7 @@ button {
   height: 174px;
   top: 0;
   left: 314.75px;
-  background: url(https://codia-f2c.s3.us-west-1.amazonaws.com/image/2025-10-30/LXCYuQqGKE.png)
+  background: url(https://imglink.io/i/98537a4b-cd8f-4e3d-a843-5322a5153375.png)
     no-repeat center;
   background-size: cover;
   z-index: 109;
@@ -1611,7 +1611,7 @@ button {
   height: 296.496px;
   top: 2537px;
   left: 975.856px;
-  background: url(https://codia-f2c.s3.us-west-1.amazonaws.com/image/2025-10-30/aGSAD5jgbL.png)
+  background: url(https://imglink.io/i/b0fc465e-44cf-4681-a296-ab577f9e33d3.png)
     no-repeat center;
   background-size: cover;
   z-index: 18;
@@ -1641,7 +1641,7 @@ button {
   height: 451px;
   top: 2793px;
   left: 746px;
-  background: url(https://codia-f2c.s3.us-west-1.amazonaws.com/image/2025-10-30/Hys4ve9WSk.png)
+  background: url(https://imglink.io/i/7b216f3e-99bf-4fdb-9d74-ddfbb91ca799.png)
     no-repeat center;
   background-size: cover;
   z-index: 170;
@@ -1652,7 +1652,7 @@ button {
   height: 448px;
   top: 2794px;
   left: 118px;
-  background: url(https://codia-f2c.s3.us-west-1.amazonaws.com/image/2025-10-30/siGsxhbXxn.png)
+  background: url(https://imglink.io/i/461833dd-588e-4c88-937b-8974c6823ee4.png)
     no-repeat center;
   background-size: cover;
   z-index: 167;
@@ -1663,7 +1663,7 @@ button {
   height: 1580px;
   top: 2931px;
   left: 49px;
-  background: url(https://codia-f2c.s3.us-west-1.amazonaws.com/image/2025-10-30/nDQF6mr6OO.png)
+  background: url(https://imglink.io/i/94161f0e-9a7f-4f10-b7e5-4900fda6d993.png)
     no-repeat center;
   background-size: cover;
   z-index: 4;
@@ -1868,7 +1868,7 @@ button {
   height: 174px;
   top: 0;
   left: 229.75px;
-  background: url(https://codia-f2c.s3.us-west-1.amazonaws.com/image/2025-10-30/79RWaujhWg.png)
+  background: url(https://imglink.io/i/d719c04a-b73f-4b6a-a064-b9c569b1f7db.png)
     no-repeat center;
   background-size: cover;
   z-index: 119;
@@ -1879,7 +1879,7 @@ button {
   height: 174px;
   top: 0;
   left: 861.75px;
-  background: url(https://codia-f2c.s3.us-west-1.amazonaws.com/image/2025-10-30/c8O1cfjLYP.png)
+  background: url(https://imglink.io/i/d719c04a-b73f-4b6a-a064-b9c569b1f7db.png)
     no-repeat center;
   background-size: cover;
   z-index: 127;
@@ -2002,7 +2002,7 @@ button {
   height: 1047px;
   top: 3564px;
   left: 8px;
-  background: url(https://codia-f2c.s3.us-west-1.amazonaws.com/image/2025-10-30/4ia1bGi9Mu.png)
+  background: url(https://imglink.io/i/b642f2b4-6e74-451a-9d9d-47588925faee.png)
     no-repeat center;
   background-size: cover;
   z-index: 1
@@ -2080,7 +2080,7 @@ button {
   height: 419px;
   top: 4010px;
   left: 6px;
-  background: url(https://codia-f2c.s3.us-west-1.amazonaws.com/image/2025-10-30/C3bhOdagCP.png)
+  background: url(https://imglink.io/i/92d0215d-ab43-4d30-98d0-07a9a63b50d1.png)
     no-repeat center;
   background-size: cover;
   z-index: 10;
@@ -2138,7 +2138,7 @@ button {
   top: 4491px;
   left: 49px;
   font-size: 0px;
-  background: url(https://codia-f2c.s3.us-west-1.amazonaws.com/image/2025-10-30/Msn6m97De6.png)
+  background: url(https://imglink.io/i/bbcaa8a1-2d96-4969-a772-e6d8a11a053d.png)
     no-repeat center;
   background-size: cover;
   z-index: 5;
@@ -2399,7 +2399,7 @@ button {
   height: 1550px;
   top: 8336px;
   left: 50%;
-  background: url(https://codia-f2c.s3.us-west-1.amazonaws.com/image/2025-10-30/wNrZJ2eeWy.png)
+  background: url(https://imglink.io/i/6e965442-f5ac-4bed-8bf6-fd4199a70498.png)
     no-repeat center;
   background-size: cover;
   transform: translate(-50%, 0);
@@ -2420,7 +2420,7 @@ button {
   height: 1453px;
   top: 0;
   left: 50%;
-  background: url(https://codia-f2c.s3.us-west-1.amazonaws.com/image/2025-10-30/rL8O0zoJHz.png)
+  background: url(https://imglink.io/i/b46aee5f-6b8e-4bf6-8129-2cf4763e4486.png)
     no-repeat center;
   background-size: cover;
   transform: translate(-50%, 0);
@@ -2607,7 +2607,7 @@ button {
   height: 1240px;
   top: 1262px;
   left: 50%;
-  background: url(https://codia-f2c.s3.us-west-1.amazonaws.com/image/2025-10-30/YWjuxe94ns.png)
+  background: url(https://imglink.io/i/4b6a365b-7e6a-48fc-a692-d6360fcadbe3.png)
     no-repeat center;
   background-size: cover;
   transform: translate(-48.53%, 0);
@@ -2626,7 +2626,7 @@ button {
   height: 228px;
   top: 0;
   left: 50%;
-  background: url(https://codia-f2c.s3.us-west-1.amazonaws.com/image/2025-10-30/9VbX7DEt2e.png)
+  background: url(https://imglink.io/i/ac3ccced-9caf-492c-9b0f-81fc95fac6b3.png)
     no-repeat center;
   background-size: cover;
   transform: translate(-50.44%, 0);
@@ -2694,7 +2694,7 @@ button {
   width: 1306px;
   height: 451px;
   margin: 33.916px 0 0 30px;
-  background: url(https://codia-f2c.s3.us-west-1.amazonaws.com/image/2025-10-30/dsTw0LXMQm.png)
+  background: url(https://imglink.io/i/93487c3a-57e0-47f4-8dc5-a39f8acc1b58.png)
     no-repeat center;
   background-size: cover;
   z-index: 171;
@@ -2747,7 +2747,7 @@ button {
   height: 1199px;
   top: 12426px;
   left: 50%;
-  background: url(https://codia-f2c.s3.us-west-1.amazonaws.com/image/2025-10-30/FwH4sKMAr0.png)
+  background: url(https://imglink.io/i/2b0f02a1-ec27-4b15-8910-c3f9dd7ee9b4.png)
     no-repeat center;
   background-size: cover;
   transform: translate(-50%, 0);
@@ -2767,7 +2767,7 @@ button {
   height: 1240px;
   top: 0;
   left: 50%;
-  background: url(https://codia-f2c.s3.us-west-1.amazonaws.com/image/2025-10-30/03yLDPqAuW.png)
+  background: url(https://imglink.io/i/119c983e-27c5-400b-8a50-3db9a01f0ef4.png)
     no-repeat center;
   background-size: cover;
   transform: translate(-48.86%, 0);
@@ -2779,7 +2779,7 @@ button {
   height: 2083px;
   top: 1151px;
   left: 50%;
-  background: url(https://codia-f2c.s3.us-west-1.amazonaws.com/image/2025-10-30/cde5WATfwp.png)
+  background: url(https://imglink.io/i/50552605-c10b-4111-b934-81f7428c11d6.png)
     no-repeat center;
   background-size: cover;
   transform: translate(-50%, 0);
@@ -2791,7 +2791,7 @@ button {
   height: 1240px;
   top: 2155px;
   left: 44px;
-  background: url(https://codia-f2c.s3.us-west-1.amazonaws.com/image/2025-10-30/6BxWcXU3Hu.png)
+  background: url(https://imglink.io/i/fd62625e-6abe-4809-b93c-63a4e5bb66f1.png)
     no-repeat center;
   background-size: cover;
   z-index: 8;
@@ -2803,7 +2803,7 @@ button {
   top: 2937px;
   left: 559px;
   font-size: 0px;
-  background: url(https://codia-f2c.s3.us-west-1.amazonaws.com/image/2025-10-30/5OgN8qGgZt.png)
+  background: url(https://imglink.io/i/a26c659b-7c8a-42fe-b67a-18ee9dc4935a.png)
     no-repeat center;
   background-size: cover;
   z-index: 74;
